@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.5 2004/10/23 14:02:34 jmmv Exp $
+@comment $NetBSD: PLIST,v 1.6 2004/10/25 15:39:02 minskim Exp $
 bin/liferea
 bin/liferea-bin
 lib/liferea/liblihtmlg.la
@@ -6,19 +6,20 @@ man/man1/liferea.1
 share/applications/liferea.desktop
 share/gconf/schemas/liferea.schemas
 share/liferea/css/liferea.css
+share/liferea/opml/feedlist.opml
+share/liferea/opml/feedlist_de.opml
+share/liferea/opml/feedlist_es.opml
+share/liferea/opml/feedlist_fr.opml
 share/liferea/pixmaps/available.png
 share/liferea/pixmaps/directory.png
 share/liferea/pixmaps/empty.png
 share/liferea/pixmaps/flag.png
-share/liferea/pixmaps/help.png
 share/liferea/pixmaps/liferea.png
 share/liferea/pixmaps/ocs.png
 share/liferea/pixmaps/offline.png
 share/liferea/pixmaps/online.png
 share/liferea/pixmaps/read.xpm
-share/liferea/pixmaps/unavailable.png
 share/liferea/pixmaps/unread.png
-share/liferea/pixmaps/updating.png
 share/liferea/pixmaps/vfolder.png
 ${PKGLOCALEDIR}/locale/bg/LC_MESSAGES/liferea.mo
 ${PKGLOCALEDIR}/locale/cs/LC_MESSAGES/liferea.mo
@@ -35,6 +36,7 @@ ${PKGLOCALEDIR}/locale/zh_TW/LC_MESSAGES/liferea.mo
 share/pixmaps/liferea.png
 @comment in xdg-dirs: @dirrm share/pixmaps
 @dirrm share/liferea/pixmaps
+@dirrm share/liferea/opml
 @dirrm share/liferea/css
 @dirrm share/liferea
 @comment in GConf2: @dirrm share/gconf/schemas
